# ftpServer

./: .gitignore  CMakeLists.txt  README.md  manifest.properties  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  displayConfig.cpp  displayConfig.h  filesystem.cpp  filesystem.h  ftpServer.cpp  ftpServer.h  ftpUiScreen.cpp  ftpUiScreen.h  idf_component.yml  main.cpp  spinner_img.c  spinner_img.h
main/Source/: FTPServer.cpp  FTPServer.h  FtpServerCore.cpp  FtpServerCore.h  MainView.cpp  MainView.h  SettingsView.cpp  SettingsView.h  View.h
